# resona-ai-research-assistant

./: .gitignore  render.yaml  test_connection.py
.github/workflows/: ci.yml
ai-research-agent/: .env.example  .gitignore  README.md  pyproject.toml
ai-research-agent/src/research_agent/: __init__.py  crew.py  main.py  report_generator.py
ai-research-agent/src/research_agent/config/: agents.yaml  tasks.yaml
ai-research-agent/src/research_agent/tools/: __init__.py  custom_tool.py
ai-research-agent/tests/: test_report_generator.py
research-agent/: .dockerignore  .gitignore  Dockerfile  README.md  agents.py  critic.py  docker-compose.yml  graph.py  llm_config.py  main.py  orchestrator.py  ragas_eval.py  requirements.txt  research_queue.py  retry_utils.py  router.py  server.py  tasks.py  tools.py  tracing.py
research-agent/archive/: agents.py
research-agent/chain/: chain.py  prompts.py
research-agent/memory/: chroma_store.py  faiss_index.py
research-agent/schemas/: __init__.py  models.py  parser.py
research-agent/static/: index.html
research-agent/tests/: test_orchestrator.py  test_report_generator.py
