[project]
name = "ai-research-agent"
version = "1.0.0"
description = "An autonomous AI agent that researches any topic and generates structured reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
    "crewai[tools]>=0.80.0",
    "weasyprint>=62.0",
    "markdown>=3.6",
    "python-dotenv>=1.0",
    "duckduckgo-search>=6.0",
]

[project.scripts]
research-agent = "research_agent.main:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:launch_testing -p no:launch_ros"
